Update for 1.21.6-pre3